--- a/_posts/2023-10-06-Sales_Insights.html
+++ b/_posts/2023-10-06-Sales_Insights.html
@@ -119,7 +119,7 @@ link: 'https://github.com/ReneDCDSL//Sales_Insights/'
 	</script>
 
 	<p>
-		This project is a sales insight on a mock data set from a hardware company. In this project, we try to analyze the sales revenue and profit evolution in various regions of India and for different customers over several years.
+		This project is a sales insight on a mock data set from a hardware company. Here, we try to analyze the sales revenue and profit evolution in various regions of India and for different customers over several years.
 	</p>
 	
 	<h1>Summary</h1>
@@ -929,7 +929,7 @@ Profit&nbsp;Margin&nbsp;Contribution&nbsp;%&nbsp;=<br><span class="Keyword" styl
 			<br><h6>Customers: Leader, Control, Logic Stores <a href="https://github.com/ReneDCDSL/Sales_Insights/tree/main/dashboards/2019/2019_tier_A_profit_per_transa.pdf"><img src="/img/graph.jpg" style="width: 30px; height: 30px; display:inline-block;"></a></h6>
 			<li>
 				<strong>Leader [1.9/6.7/11.1], Control [3/4.5/4.7] and Logic Stores [1.7/3.4/6.1]</strong> all had high average profit per transaction in 2019. Each of these stores 
-				managed to have a transaction average profit of over 4.5%. These customers have been very profitable last year, keeping a good relation with them is advised.
+				managed to have a transaction average profit of over 4.5%. These customers have been very profitable last year, keeping a good relationship with them is advised.
 			</li>
 		</ul>
 
