--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ layout: default
             <img src="/img/ReneDeChamps_picture_squared.jpg">
             <h5>René de Champs</h5>
             <h3>Graduate in Statistics</h3>
-            Download my <img src="/img/cv.jpg" style="width: 40px; height: 40px; display:inline-block; margin-bottom: 35px;"> in <a href="/files/CV_RenéDeChamps_EN.pdf" style="color: #8C9593;"><i>English</i></a> or <a href="/files/CV_RenéDeChamps_FR.pdf" style="color: #AABDBF;"><i>French</i></a>
+            Download my <img src="/img/cv.jpg" style="width: 40px; height: 40px; display:inline-block; margin-bottom: 35px;"> in <a href="/files/Resume_RenéDeChamps.pdf" style="color: #8C9593;"><i>English</i></a> or <a href="/files/CV_RenéDeChamps_FR.pdf" style="color: #AABDBF;"><i>French</i></a>
             <content style="color: #0D1E20;">
                 <h3 style="padding-top: 5px;"><span style="text-decoration: underline;">Education</span></h3>
                 <ul style="list-style: none;">
